--- a/css/my-main.css
+++ b/css/my-main.css
@@ -96,6 +96,8 @@ a {
 }
 
 .description {
+  max-width: 1000px;
+  margin: 0 auto;
   font-size: 1.2rem;
   color: #888;
 }
@@ -119,6 +121,8 @@ a {
 }
 
 .mid-message {
+  max-width: 1000px;
+  margin: 0 auto;
   font-size: 2rem;
   color: #888;
   padding: 0 1rem;
@@ -129,6 +133,8 @@ a {
 }
 
 .canvas-caption {
+  max-width: 1000px;
+  margin: 0 auto;
   color: #888;
   padding: 0 1rem;
   font-size: 1.2rem;
@@ -141,4 +147,42 @@ a {
   height: 7rem;
   background-color: darkorange;
   color: #fff;
+}
+
+@media (min-width: 1024px) {
+  #scroll-section-0 h1 {
+    font-size: 9vw;
+  }
+
+  .main-message {
+    font-size: 4vw;
+  }
+
+  .description {
+    font-size: 2rem;
+  }
+
+  .description strong {
+    font-size: 6rem;
+  }
+
+  #scroll-section-2 .main-message {
+    font-size: 6vw;
+  }
+
+  .main-message small {
+    font-size: 1.5vw;
+  }
+
+  .desc-message {
+    width: 20%;
+  }
+
+  .mid-message {
+    font-size: 4vw;
+  }
+
+  .canvas-caption {
+    font-size: 2rem;
+  }
 }
